Add open graph info

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Online shopping">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="./assets/img/og_image.png">
+    <meta property="og:url" content="https://yjclarelee.github.io/online_shopping/">
+    <meta property="og:description" content="A simple webpage where you can see clothes depending on the chosen category.">
     <title>Online Shopping</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./assets/js/main.js" defer></script>
